deploy/kubernetes/app1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app1-ing
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: app1.local
    http:
      paths:
      - path: /
        backend:
          serviceName: app1-svc
          servicePort: 80
